--- a/homepage.html
+++ b/homepage.html
@@ -10,6 +10,7 @@
 <body>
     <nav class="nav-bar">
         <ol>
+            <!-- Routes have not been made yet -->
             <li><a href="/bot"></a>Character Bot</a></li>
             <li><a href="/where-are-they-now">Where Are They Now?</a></li>
             <li><a href="/clips">Non-stop Seinfeld Clips</a></li>
@@ -17,7 +18,8 @@
         </ol>
     </nav>
 
-
+<h3>Festivus is December 23rd!</h3>
+<p>Mark your calendar</p>
 
 </body>
 
